# box-fraise-chat

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml  railway.toml
docker/init/: 01-roles.sql
migrations/: 0001_init.sql
src/: app.rs  audit.rs  auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs
src/domain/: mod.rs
src/domain/keys/: repository.rs  routes.rs  service.rs  types.rs
src/domain/messages/: repository.rs  routes.rs  service.rs  types.rs
src/domain/ws/: hub.rs  routes.rs
src/http/: extractors.rs
tests/: integration.rs
